<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name" translatable="false">Com-Phone</string>
	<string name="button_ok">OK</string>
	<string name="button_save">Save</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_delete">Delete</string>
	<string name="button_continue">Continue</string>
	<string name="current_value_as_sentence">Current: %1$s.</string>
	<string name="frame_image_description">The image for this frame</string>
	<string name="frame_thumbnail_description_button">Add a new frame</string>
	<string name="frame_thumbnail_description_generic" tools:ignore="PluralsCandidate">Frame %1$d thumbnail image</string>
	<string name="zero_length_audio" translatable="false">0:00.0</string>
	<string name="seconds">seconds</string>
	<string name="background_task_progress">Please wait…</string>
	<string name="import_starting">Starting to process imported files…</string>
	<string name="import_file_confirmation">Import file</string>
	<string name="import_file_hint">Would you like to import the narrative %1$s?</string>
	<string name="import_not_now">Not now</string>
	<string name="import_file">Import</string>
	<string name="import_progress">Processing new narrative files…</string>
	<string name="import_finished">Successfully imported new narrative files</string>
	<string name="video_export_format_incompatible_title">Warning</string>
	<string name="video_export_format_incompatible_summary">This narrative contains audio that is incompatible with video files (currently M4A, MP3 and WAV are supported). This audio will not be included in the video.\n\nContinue exporting?</string>
	<string name="video_export_task_progress">Creating video file – this may take some time…</string>
	<string name="video_export_run_in_background">Run in background</string>
	<string name="video_export_task_complete">Video creation completed</string>
	<string name="video_export_task_complete_notification">Tap to save or share your video</string>
	<string name="video_export_task_complete_hint">%1$s – tap the notification to save or share your video</string>
	<string name="error_loading_narrative_player">Error: couldn\'t open the narrative – please try again</string>
	<string name="permission_notification_rationale">Please grant %1$s permission to send notifications in order to be able to create videos in the background</string>
	<string name="export_narrative_title">Export this narrative</string>
	<string name="export_icon_one_way" translatable="false">&#x2191;&#160;&#160;&#160;&#160;%1$s</string>
	<string name="export_icon_two_way" translatable="false">&#x2191;&#x2193;&#160;&#160;%1$s</string>
	<string name="export_video">Video (share, upload, YouTube)</string>
	<string name="export_html">HTML (create a webpage)</string>
	<string name="export_zip">ZIP (save, archive)</string>
	<string name="export_smil">SMIL (send to %1$ss)</string>
	<string name="export_narrative_failed">Error: failed to export the narrative – please try again</string>
	<string name="export_missing_directory">Error: unable to find a temporary directory – please ensure your device or SD card has free space available</string>
	<string name="camera_image_description">The image taken with the camera</string>
	<string name="title_audio">Add sounds</string>
	<string name="title_text">Add text</string>
	<string name="preferences_editing">Editing</string>
	<string name="preferences_high_quality_pictures_title">High picture quality</string>
	<string name="preferences_high_quality_pictures_summary_off">Pictures will be captured in low quality (small file size)</string>
	<string name="preferences_high_quality_pictures_summary_on">Pictures will be captured in high quality (rear camera only)</string>
	<string name="preferences_pictures_to_media_title">Add pictures to gallery</string>
	<string name="preferences_pictures_to_media_summary_off">Pictures will not be added to your gallery</string>
	<string name="preferences_pictures_to_media_summary_on">Pictures will be added to your gallery</string>
	<string name="preferences_audio_bitrate_title">Audio quality</string>
	<string name="preferences_audio_bitrate_summary">Try changing if you experience audio recording problems. Higher quality causes slower export</string>
	<string name="preferences_audio_to_media_title">Add audio to library</string>
	<string name="preferences_audio_to_media_summary_off">Audio recordings will not be added to your music library</string>
	<string name="preferences_audio_to_media_summary_on">Audio recordings will be added to your music library</string>
	<string name="preferences_playback_export">Playback and export</string>
	<string name="preferences_minimum_frame_duration_title">Frame duration</string>
	<string name="preferences_minimum_frame_duration_summary">Default duration for each frame. Double tap here to reset</string>
	<string name="preferences_word_duration_title">Word duration</string>
	<string name="preferences_word_duration_summary">Default duration for each word of text. Double tap here to reset</string>
	<string name="preferences_audio_resampling_title">Exported audio quality</string>
	<string name="preferences_video_quality_title">Exported video quality</string>
	<string name="preferences_export_quality_summary">Higher quality leads to larger exported file sizes. Lower quality is faster to export</string>
	<string name="preferences_video_format_title">Exported video format</string>
	<string name="preferences_video_format_summary">Try changing if you experience video export problems. MP4 is more compatible with external video players</string>
	<string name="preferences_export_square_videos_title">Export square videos</string>
	<string name="preferences_export_square_videos_summary_off">Exported videos will match the combined aspect ratio of the images they contain</string>
	<string name="preferences_export_square_videos_summary_on">Exported videos will be square, regardless of their image aspect ratio</string>
	<string name="preferences_export_directory_title">Export directory</string>
	<string name="preferences_export_directory_summary">Choose where to save exported narratives. The default location is your Downloads folder</string>
	<string name="preferences_import">Import</string>
	<string name="preferences_watch_for_files_title">Scan for new narratives</string>
	<string name="preferences_watch_for_files_summary_off">Narratives sent via Bluetooth will not be imported automatically; you can import via the \"%1$s\" menu option</string>
	<string name="preferences_watch_for_files_summary_on">The import directory will be monitored for incoming narratives</string>
	<string name="preferences_bluetooth_directory_title">Import directory</string>
	<string name="preferences_bluetooth_directory_summary">Set the directory to monitor for narratives. Choose your Bluetooth directory to automatically scan for incoming files</string>
	<string name="preferences_confirm_importing_title">Ask before importing</string>
	<string name="preferences_confirm_importing_summary_off">Narratives will be imported automatically</string>
	<string name="preferences_confirm_importing_summary_on">You will be prompted before importing each narrative</string>
	<string name="preferences_delete_after_importing_title">Delete files after import</string>
	<string name="preferences_delete_after_importing_summary_off">Imported files will be left in place</string>
	<string name="preferences_delete_after_importing_summary_on">Files will be removed from the import directory when processed</string>
	<string name="preferences_templates">Templates</string>
	<string name="preferences_allow_deleting_templates_title">Allow deleting templates</string>
	<string name="preferences_allow_deleting_templates_summary_off">Template deletion will not be allowed</string>
	<string name="preferences_allow_deleting_templates_summary_on">Long-press a template to delete</string>
	<string name="preferences_appearance">Appearance</string>
	<string name="preferences_orientation_title">Screen orientation</string>
	<string name="preferences_orientation_summary">Set the desired screen rotation behaviour</string>
	<string name="preferences_start_scrolled_to_end_title">Start scrolled to end</string>
	<string name="preferences_start_scrolled_to_end_summary_off">Narratives will show normally</string>
	<string name="preferences_start_scrolled_to_end_summary_on">Narratives will be scrolled to the end on startup – useful for regularly adding to ongoing stories</string>
	<string name="preferences_advanced">Advanced features</string>
	<string name="preferences_spanning_media_title">Enable spanning media</string>
	<string name="preferences_spanning_media_summary_off">Media items will only appear on one frame</string>
	<string name="preferences_spanning_media_summary_on">Media items will be able to span multiple frames</string>
	<string name="preferences_custom_font_title">Select custom font</string>
	<string name="preferences_custom_font_summary_off">Text in narratives will use the default Android font</string>
	<string name="preferences_export_subtitle_file_title">Export video text as subtitles</string>
	<string name="preferences_export_subtitle_file_summary_off">Text will be embedded in the video</string>
	<string name="preferences_export_subtitle_file_summary_on">Text will be exported in a separate SRT file (except when it is the only content in a frame)</string>
	<string name="preferences_beta">Beta: WARNING – these are experimental features – data loss may occur!</string>
	<string name="preferences_timing_editor_title">Enable timing editor</string>
	<string name="preferences_timing_editor_summary_off">The timing editor feature is disabled</string>
	<string name="preferences_timing_editor_summary_on">Use the option on the playback screen to set precise timings for each frame</string>
	<string name="preferences_undelete_narratives_title">Restore deleted narratives</string>
	<string name="preferences_undelete_narratives_summary">All recently-deleted narratives will be restored</string>
	<string name="preferences_about">About</string>
	<string name="preferences_contact_us_title">Get in touch</string>
	<string name="preferences_contact_us_summary">Email us your feedback, or report a problem</string>
	<string name="preferences_app_store_title">Visit app store</string>
	<string name="preferences_app_store_summary">Add a review or download the latest %1$s update</string>
	<string name="preferences_install_helper_narrative_title">Help and tips</string>
	<string name="preferences_install_helper_narrative_summary">Tap to add a narrative containing help and tips</string>
	<string name="preferences_help_translate_title">Help translate</string>
	<string name="preferences_help_translate_summary">Add your language, or suggest translation improvements</string>
	<string name="preferences_help_translate_link" translatable="false">https://app.transifex.com/communitymedia/mediaphone/</string>
	<string name="preferences_get_source_code_title">Get the source code</string>
	<string name="preferences_get_source_code_summary">Browse, fork or report issues on GitHub</string>
	<string name="preferences_get_source_code_link" translatable="false">https://github.com/communitymedia/mediaphone</string>
	<string name="preferences_show_contributors_title">Contributors</string>
	<string name="preferences_show_contributors_summary">Translators and open source software licenses</string>
	<string name="preferences_get_contributors_link" translatable="false">https://www.digitaleconomytoolkit.org/com-phone/contributors.html</string>
	<string name="menu_finished_editing">Done</string>
	<string name="hint_take_photo">Take a photo</string>
	<string name="hint_rotate_image">Rotate</string>
	<string name="hint_flash">Flash</string>
	<string name="hint_switch_camera">Switch camera</string>
</resources>