<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:seekbar="http://schemas.android.com/apk/res-auto">
	<PreferenceCategory
		android:key="@string/key_editing_category"
		android:title="@string/preferences_editing">
		<CheckBoxPreference
			android:defaultValue="@bool/default_high_quality_pictures"
			android:key="@string/key_high_quality_pictures"
			android:summaryOff="@string/preferences_high_quality_pictures_summary_off"
			android:summaryOn="@string/preferences_high_quality_pictures_summary_on"
			android:title="@string/preferences_high_quality_pictures_title" />
		<CheckBoxPreference
			android:defaultValue="@bool/default_pictures_to_media"
			android:key="@string/key_pictures_to_media"
			android:summaryOff="@string/preferences_pictures_to_media_summary_off"
			android:summaryOn="@string/preferences_pictures_to_media_summary_on"
			android:title="@string/preferences_pictures_to_media_title" />
		<ListPreference
			android:defaultValue="@integer/default_audio_bitrate"
			android:dialogTitle="@string/preferences_audio_bitrate_title"
			android:entries="@array/preferences_audio_bitrate_entries"
			android:entryValues="@array/preferences_audio_bitrate_values"
			android:key="@string/key_audio_bitrate"
			android:summary="@string/preferences_audio_bitrate_summary"
			android:title="@string/preferences_audio_bitrate_title" />
		<CheckBoxPreference
			android:defaultValue="@bool/default_audio_to_media"
			android:key="@string/key_audio_to_media"
			android:summaryOff="@string/preferences_audio_to_media_summary_off"
			android:summaryOn="@string/preferences_audio_to_media_summary_on"
			android:title="@string/preferences_audio_to_media_title" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/preferences_playback_export">
		<ac.robinson.mediaphone.view.SeekBarPreference
			android:defaultValue="@dimen/default_minimum_frame_duration"
			android:key="@string/key_minimum_frame_duration"
			android:summary="@string/preferences_minimum_frame_duration_summary"
			android:title="@string/preferences_minimum_frame_duration_title"
			seekbar:appendUnits="@string/seconds"
			seekbar:interval="@dimen/minimum_frame_duration_interval"
			seekbar:maxVal="@dimen/minimum_frame_duration_max"
			seekbar:minVal="@dimen/minimum_frame_duration_min" />
		<ac.robinson.mediaphone.view.SeekBarPreference
			android:defaultValue="@dimen/default_word_duration"
			android:key="@string/key_word_duration"
			android:summary="@string/preferences_word_duration_summary"
			android:title="@string/preferences_word_duration_title"
			seekbar:appendUnits="@string/seconds"
			seekbar:interval="@dimen/word_duration_interval"
			seekbar:maxVal="@dimen/word_duration_max"
			seekbar:minVal="@dimen/word_duration_min" />
		<ListPreference
			android:defaultValue="@integer/default_resampling_bitrate"
			android:dialogTitle="@string/preferences_audio_resampling_title"
			android:entries="@array/preferences_audio_resampling_entries"
			android:entryValues="@array/preferences_audio_resampling_values"
			android:key="@string/key_audio_resampling_bitrate"
			android:summary="@string/preferences_export_quality_summary"
			android:title="@string/preferences_audio_resampling_title" />
		<ListPreference
			android:defaultValue="@integer/default_video_quality"
			android:dialogTitle="@string/preferences_video_quality_title"
			android:entries="@array/preferences_video_export_entries"
			android:entryValues="@array/preferences_video_export_values"
			android:key="@string/key_video_quality"
			android:summary="@string/preferences_export_quality_summary"
			android:title="@string/preferences_video_quality_title" />
		<ListPreference
			android:defaultValue="@string/default_video_format"
			android:dialogTitle="@string/preferences_video_format_title"
			android:entries="@array/preferences_video_format_entries"
			android:entryValues="@array/preferences_video_format_values"
			android:key="@string/key_video_format"
			android:summary="@string/preferences_video_format_summary"
			android:title="@string/preferences_video_format_title" />
		<CheckBoxPreference
			android:defaultValue="@bool/default_export_square_videos"
			android:key="@string/key_square_videos"
			android:summaryOff="@string/preferences_export_square_videos_summary_off"
			android:summaryOn="@string/preferences_export_square_videos_summary_on"
			android:title="@string/preferences_export_square_videos_title" />
		<Preference
			android:defaultValue="@null"
			android:key="@string/key_export_directory"
			android:summary="@string/preferences_export_directory_summary"
			android:title="@string/preferences_export_directory_title" />
	</PreferenceCategory>
	<PreferenceCategory
		android:key="@string/key_import_category"
		android:title="@string/preferences_import">
		<CheckBoxPreference
			android:defaultValue="@bool/default_watch_for_files"
			android:key="@string/key_watch_for_files"
			android:summaryOff="@string/preferences_watch_for_files_summary_off"
			android:summaryOn="@string/preferences_watch_for_files_summary_on"
			android:title="@string/preferences_watch_for_files_title" />
		<CheckBoxPreference
			android:defaultValue="@bool/default_confirm_importing"
			android:key="@string/key_confirm_importing"
			android:summaryOff="@string/preferences_confirm_importing_summary_off"
			android:summaryOn="@string/preferences_confirm_importing_summary_on"
			android:title="@string/preferences_confirm_importing_title" />
		<Preference
			android:defaultValue="@string/default_bluetooth_directory"
			android:key="@string/key_bluetooth_directory"
			android:summary="@string/preferences_bluetooth_directory_summary"
			android:title="@string/preferences_bluetooth_directory_title" />
		<CheckBoxPreference
			android:defaultValue="@bool/default_delete_after_importing"
			android:key="@string/key_delete_after_importing"
			android:summaryOff="@string/preferences_delete_after_importing_summary_off"
			android:summaryOn="@string/preferences_delete_after_importing_summary_on"
			android:title="@string/preferences_delete_after_importing_title" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/preferences_templates">
		<CheckBoxPreference
			android:defaultValue="@bool/default_allow_deleting_templates"
			android:key="@string/key_allow_deleting_templates"
			android:summaryOff="@string/preferences_allow_deleting_templates_summary_off"
			android:summaryOn="@string/preferences_allow_deleting_templates_summary_on"
			android:title="@string/preferences_allow_deleting_templates_title" />
	</PreferenceCategory>
	<PreferenceCategory
		android:key="@string/key_appearance_category"
		android:title="@string/preferences_appearance">
		<ListPreference
			android:defaultValue="@integer/default_screen_orientation"
			android:dialogTitle="@string/preferences_orientation_title"
			android:entries="@array/preferences_orientation_entries"
			android:entryValues="@array/preferences_orientation_values"
			android:key="@string/key_screen_orientation"
			android:summary="@string/preferences_orientation_summary"
			android:title="@string/preferences_orientation_title" />
		<CheckBoxPreference
			android:defaultValue="@bool/default_start_scrolled_to_end"
			android:key="@string/key_start_scrolled_to_end"
			android:summaryOff="@string/preferences_start_scrolled_to_end_summary_off"
			android:summaryOn="@string/preferences_start_scrolled_to_end_summary_on"
			android:title="@string/preferences_start_scrolled_to_end_title" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/preferences_advanced">
		<CheckBoxPreference
			android:defaultValue="@bool/default_spanning_media"
			android:key="@string/key_spanning_media"
			android:summaryOff="@string/preferences_spanning_media_summary_off"
			android:summaryOn="@string/preferences_spanning_media_summary_on"
			android:title="@string/preferences_spanning_media_title" />
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="@string/key_custom_font"
			android:summaryOff="@string/preferences_custom_font_summary_off"
			android:summaryOn="@string/preferences_custom_font_summary_off"
			android:title="@string/preferences_custom_font_title" /><!-- note: both summaries initially the same to avoid FOUT -->
		<CheckBoxPreference
			android:defaultValue="@bool/default_export_subtitle_file"
			android:key="@string/key_export_subtitle_file"
			android:summaryOff="@string/preferences_export_subtitle_file_summary_off"
			android:summaryOn="@string/preferences_export_subtitle_file_summary_on"
			android:title="@string/preferences_export_subtitle_file_title" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/preferences_beta">
		<CheckBoxPreference
			android:defaultValue="@bool/default_timing_editor"
			android:key="@string/key_timing_editor"
			android:summaryOff="@string/preferences_timing_editor_summary_off"
			android:summaryOn="@string/preferences_timing_editor_summary_on"
			android:title="@string/preferences_timing_editor_title" />
		<PreferenceScreen
			android:key="@string/key_undelete_narratives"
			android:summary="@string/preferences_undelete_narratives_summary"
			android:title="@string/preferences_undelete_narratives_title" />
	</PreferenceCategory>
	<PreferenceCategory
		android:key="@string/key_about_category"
		android:title="@string/preferences_about">
		<PreferenceScreen
			android:key="@string/key_contact_us"
			android:summary="@string/preferences_contact_us_summary"
			android:title="@string/preferences_contact_us_title" />
		<PreferenceScreen
			android:key="@string/key_app_store"
			android:summary="@string/preferences_app_store_summary"
			android:title="@string/preferences_app_store_title" />
		<PreferenceScreen
			android:key="@string/key_install_helper_narrative"
			android:summary="@string/preferences_install_helper_narrative_summary"
			android:title="@string/preferences_install_helper_narrative_title" />
		<PreferenceScreen
			android:summary="@string/preferences_help_translate_summary"
			android:title="@string/preferences_help_translate_title">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/preferences_help_translate_link" />
		</PreferenceScreen>
		<PreferenceScreen
			android:summary="@string/preferences_get_source_code_summary"
			android:title="@string/preferences_get_source_code_title">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/preferences_get_source_code_link" />
		</PreferenceScreen>
		<PreferenceScreen
			android:summary="@string/preferences_show_contributors_summary"
			android:title="@string/preferences_show_contributors_title">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/preferences_get_contributors_link" />
		</PreferenceScreen>
		<PreferenceScreen
			android:key="@string/key_about_application"
			android:title="@string/app_name" />
	</PreferenceCategory>
</PreferenceScreen>
