<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:util="http://schemas.android.com/apk/res-auto">

	<LinearLayout
		style="@style/default_horizontal_linear_layout"
		android:layout_height="0dp"
		android:layout_weight="1">

		<ac.robinson.view.CenteredImageTextButton
			android:id="@+id/button_record_audio_1"
			style="@style/default_coloured_button"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:contentDescription="@string/title_audio"
			android:drawableTop="@drawable/ic_frame_audio"
			util:filterColor="@color/button_blue" />

		<ac.robinson.view.CenteredImageTextButton
			android:id="@+id/button_record_audio_2"
			style="@style/default_coloured_button"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:contentDescription="@string/title_audio"
			android:drawableTop="@drawable/ic_frame_audio"
			android:visibility="gone"
			util:filterColor="@color/button_blue" />

		<ac.robinson.view.CenteredImageTextButton
			android:id="@+id/button_record_audio_3"
			style="@style/default_coloured_button"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:contentDescription="@string/title_audio"
			android:drawableTop="@drawable/ic_frame_audio"
			android:visibility="gone"
			util:filterColor="@color/button_blue" />
	</LinearLayout>

	<ac.robinson.view.CenteredImageTextButton
		android:id="@+id/button_add_text"
		style="@style/default_coloured_button"
		android:layout_height="0dp"
		android:layout_weight="0.7"
		android:contentDescription="@string/title_text"
		android:drawableTop="@drawable/ic_frame_text"
		android:textAllCaps="false"
		util:filterColor="@color/button_yellow" />

	<LinearLayout
		style="@style/default_horizontal_linear_layout"
		android:layout_height="@dimen/navigation_button_height">

		<ac.robinson.view.CenteredImageTextButton
			android:id="@+id/button_finished_editing"
			style="@style/default_coloured_button"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:contentDescription="@string/menu_finished_editing"
			android:drawableTop="@drawable/ic_menu_back"
			android:visibility="gone" />

		<ac.robinson.view.CenteredImageTextButton
			android:id="@+id/button_delete_frame"
			style="@style/default_coloured_button"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:contentDescription="@string/button_delete"
			android:drawableTop="@drawable/ic_menu_delete"
			util:filterColor="@color/button_red" />
	</LinearLayout>

</merge>
